css/styles.css
:root {
    --bg: #1a1a1a;
    --panel: #2d2d2d;
    --input: #3a3a3a;
    --muted: #9aa0a6;
    --text: #eaeaea;
    --primary: #008000;
    --secondary: #006000;
    --gap: 16px;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    color: var(--text)
}

html,
body {
    font-family: Arial, sans-serif;
    height: 100vh;
    width: 100vw;
    background-color: var(--bg);
    overflow-x: hidden;
}

.form-box {
    margin-top: 20px;
    border-radius: 8px;
    width: auto;
    padding: 40px;
    background-color: var(--panel);

    h1 {
        margin-bottom: 16px;
    }
}

.row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    
    margin: 8px;
}

.column {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

fieldset {
    border: none;
    margin: 8px;
    
    legend {
        font-weight: bold;
        width: auto;
        margin-left: auto;
        margin-right: auto;
        margin-top: 4px;
        margin-bottom: 4px;
    }
}

.input-group {
    margin: 4px 16px;
    font-size: 14px;
    
    label {
        align-self: flex-start;
        margin: 4px;
        font-weight: bold;
    }
    input {
        background: var(--input);
        width: fit-content;
        padding: 8px 10px;
        border: 1px solid #4a4a4a;
        border-radius: 4px;
    }
    input[type="number"]:focus {
        outline: none;
        border-color: #888;
    }
    input[type="checkbox"] {
        width: 16px;
        height: 28px;
        margin-right: 12px;
    }
    input[type="checkbox"]:focus {
        background-color: white;
    }
}
.grid {
    display: grid;
    grid-template-columns: auto auto;
    label {
        display: flex;
        justify-content: end;
        align-self: center;
        margin-right: 10px;
    }
    input {
        margin: 4px
    }
}

.output-title {
    font-size: 16px;
    font-weight: bold;
    margin:8px;
}

.output-text {
    height: 1.0em;
    margin-bottom: 8px;
}

